# ai-electronics-lab-kaggle-capstone

./: .env.example  .gitignore  AGENTS.md  LICENSING.md  README.md  pyproject.toml
.agents/skills/verified-circuit-simulation/: SKILL.md
.github/workflows/: apply-pr17-fixture.yml  ci.yml  diagnose-pr17.yml  pytest-diagnostic.yml  ruff-diagnostic.yml
docs/: decisions.md  development-log.md  evaluation.md  extraction-policy.md  fresh-clone-evidence.md  provenance.md  secret-scan-evidence.md  security.md  submission-evidence.md
scripts/: verify.sh
specs/: acceptance-scenarios.md  architecture.md  bounded-agent-orchestration.md  bounded-ngspice-raw-parser.md  bounded-ngspice-runner.md  bounded-openrouter-planner.md  bounded-simulation-deck.md  circuit-plan-adapter.md  circuit-plan-contract.md  deterministic-evidence-verifier.md  google-adk-workflow-adapter.md  minimal-local-web-ui.md  product-requirements.md  rc-high-pass-topology.md  resistive-divider-topology.md  simulation-assembly.md  structured-openrouter-plan-output.md  verified-circuit-simulation-skill.md
src/ai_electronics_lab/: __init__.py
src/ai_electronics_lab/adk/: __init__.py  tools.py  workflow.py
tests/adk/: test_workflow.py
tests/contracts/: test_circuit_plan.py
tests/orchestration/: test_bounded_agent_orchestration.py  test_planner_mapping_regression.py
tests/planning/: test_flat_openrouter_values.py  test_openrouter.py  test_planner.py  test_provider_json_whitespace.py  test_structured_openrouter.py
tests/simulation/: test_assembly.py  test_deck.py  test_plan_adapter.py  test_raw_parser.py  test_runner.py
tests/skills/: test_verified_circuit_simulation_skill.py
tests/verification/: test_evidence.py
tests/web/: test_app.py
(+50 files in other folders)
