[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "ai-electronics-lab-kaggle-capstone"
version = "0.1.0"
description = "Evidence-first circuit simulation agent with deterministic SPICE validation."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_electronics_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [
  ".git",
  ".venv",
  "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.format]
line-ending = "lf"
